:pencil2: Little more style fixes

--- a/words.html
+++ b/words.html
@@ -95,24 +95,23 @@ Thanks again!
 Во время Первой мировой войны, мир вспыхнул.
 <br><br>
 
-Это было Рождество 1914 года на Западном фронте.<br>
-Несмотря на строгие приказы <i>не</i> расслабляться с противником,<br>
-британские и немецкие солдаты покинули свои окопы и пересекли Ничейную<br>
-землю, чтобы похоронить погибших, обменяться подарками и поиграть.
+Это было Рождество 1914 года на Западном фронте. Несмотря на<br>
+строгие приказы <i>не</i> расслабляться, британские и немецкие солдаты покинули<br>
+свои окопы и пересекли нейтральную землю, чтобы похоронить погибших,<br>
+обменяться подарками и поиграть.
 <br><br>
 
-Между тем: это 2017 год, Запад находится в мире на протяжении десятилетий,<br>
-и, ничего себе, мы <i>сосём</i> в доверии. Опросы показывают, что за последние<br>
-сорок лет все меньше и меньше людей говорят, что они доверяют друг другу.<br>
-Итак, вот наша головоломка:
+Тем временем сейчас 2017 год, мир на Западе длится десятилетиями, и, вау,<br>
+мы <i>сосём</i> с доверием. Опросы показывают, что за последние 40 лет всё меньше<br>
+людей говорят, что доверяют друг другу. Итак, вот наша головоломка:
 <br><br>
 
-<b>Почему, даже в мирное время, друзья становятся врагами?<br>
-И почему, даже в военное время, враги становятся друзьями?</b>
+<b>Почему даже в мирное время друзья становятся врагами?<br>
+И почему -- даже во время войны -- враги становятся друзьями?</b>
 <br><br>
 
-Я думаю, <b>теория игр</b> может помочь объяснить нашу эпидемию недоверия –<br>
-и как мы можем это исправить! Итак, чтобы понять все это...
+Думаю, что <b>теория игр</b> может помочь объяснить нашу эпидемию недоверия<br>
+и найти способ это исправить! Итак, чтобы понять все это...
 </p>
 <p id="intro_button">
 ...давай сыграем в игру. &rarr;
@@ -147,11 +146,11 @@ Thanks again!
 
 <p id="oneoff_0_top">
 
-<b>ИГРА ДОВЕРИЯ</b>
+<b>ИГРА НА ДОВЕРИЕ</b>
 <br>
-У тебя есть один выбор.
-Перед тобой машина: если ты положишь монету в машину,
-<i>другой игрок</i> получит три монеты – и наоборот.
+У тебя есть выбор.
+Перед тобой машина: если положить в него 1 монету,
+<i>другой игрок</i> получит 3 монеты – и наоборот.
 Вы оба можете либо ДОВЕРИТЬСЯ (положить монету), либо ОБМАНУТЬ (не класть монету).
 </p>
 
@@ -927,7 +926,7 @@ one for the plural version, one for the singular version.
 именно игроки определяют игру.</b>
 <br><br>
 Итак, сделай то, что <i>ты</i> можешь сделать, создай условия
-способствующие развитию доверия. Строй отношения. Побеждай. Общайся чётко.
+способствующие развитию доверия. Строй отношения. Делай успехи. Общайся чётко.
 Может быть, тогда мы сможем прекратить стрелять друг в друга, выберемся
 из окопов, пересечём границы, чтобы собраться вместе...
 </p>
