:twisted_rightwards_arrows: Review of notes (#2)
* Add files via upload

--- a/notes/index.html
+++ b/notes/index.html
@@ -1,10 +1,7 @@
 <!--
-
 THIS FILE HAS ABOUT 1,100 WORDS TO TRANSLATE
-
 These are just the footnotes though.
 So, it's optional to translate these!
-
 -->
 
 <!DOCTYPE html>
@@ -27,87 +24,87 @@ So, it's optional to translate these!
 
 <h3>"Эволюция доверия"</h3>
 
-<p>Это интерактивное руководство основано на потрясающей книге Robert Axelrod 1984 года, <a href="https://www.amazon.com/Evolution-Cooperation-Revised-Robert-Axelrod/dp/0465005640">The Evolution of Cooperation</a>! Я был также сильно вдохновлен его продолжением 1997 года, <a href="http://press.princeton.edu/titles/6144.html">The Complexity of Cooperation</a>, и книгой Robert Putnam 2000 года об уменьшающемся "социальном капитале" Америки, <a href="http://bowlingalone.com/">Bowling Alone</a>.</p>
+<p>Это интерактивное руководство основано на потрясающей книге Роберта Аксельрода (Robert Axelrod) 1984 года, <a href="https://www.amazon.com/Evolution-Cooperation-Revised-Robert-Axelrod/dp/0465005640">The Evolution of Cooperation</a> (Эволюция сотрудничества)! Я был также сильно вдохновлен его продолжением 1997 года, <a href="http://press.princeton.edu/titles/6144.html">The Complexity of Cooperation</a> (Сложность сотрудничества), и книгой Роберта Патнэма (Robert Putnam) 2000 года об уменьшающемся "социальном капитале" Америки, <a href="http://bowlingalone.com/">Bowling Alone</a> (Боулинг в одиночку).</p>
 
-<p>да я книжный ботаник, плиз не издевайтесь надо мной</p>
+<p>да, я книжный задрот, плиз не издевайтесь надо мной</p>
 
 <h3>"Всё меньше и меньше людей говорят, что они доверяют друг другу"</h3>
 
-<p>Чтобы увидеть подробный статистический анализ этого, проверьте <a href="https://ourworldindata.org/trust">Our World In Data</a>. Мммм статистика</p>
+<p>Чтобы увидеть подробный статистический анализ этого, проверьте <a href="https://ourworldindata.org/trust">Our World In Data</a>. <br>Ммм статистика</p>
 
-<h3>"Игра доверия"</h3>
+<h3>"Игра на доверие"</h3>
 
 <p>Эта игра также известна в теории игр как печально известная <em>Дилемма Заключенного</em>. Дилемма заключенного названа в честь истории, в которой двое подозреваемых могут либо донести на своего преступного партнера-по-делу ("сжульничать"), либо молчать ("сотрудничать"). Я решил не делать эту историю, потому что 1) в этом случае оба "сотрудничающие" игрока были бы плохими для общества и 2) это нереально, все знают, что стукачи получают по заслугам</p>
 
 <h3>"Ты не будешь знать заранее, когда последний раунд"</h3>
 
-<p>В повторяющейся игре доверия (также известной как <em>Итерационной Дилемме Заключённого</em>), важно чтобы ни один из игроков не знал <em>когда</em> последний раунд. Зачем? Подумайте об этом - в последнем раунде, оба игрока будут знать, что их действие не имеет никакого значения, поэтому они оба сжульничают. Но это означает, что во предпоследнем раунде их действия не могут изменить следующий раунд, поэтому они также оба сжульничают. Но это означает, что в предпредпоследнем раунде... и т.д. и т.п.</p>
+<p>В повторяющейся игре на доверие (также известной как <em>Итерационной Дилемме Заключённого</em>) важно, чтобы ни один из игроков не знал, <em>когда</em> последний раунд. Зачем? Подумайте об этом - в последнем раунде, оба игрока будут знать, что их действие не имеет никакого значения, поэтому они оба сжульничают. Но это означает, что во предпоследнем раунде их действия не могут изменить следующий раунд, поэтому они также оба сжульничают. Но это означает, что в предпредпоследнем раунде... и т.д. и т.п.</p>
 
-<h3>"Копикот"</h3>
+<h3>"Имитатор"</h3>
 
-<p>Эта стратегия более известна в теории игр как <em>Tit For Tat</em>. Он был создан Anatol Rapoport в 1980 году, для теории игрового турнира Robert Axelrod. Я решил не использовать имя "Tit For Tat" потому что 1) это <em>звучит</em> скупо, хотя это хорошая и справедливая стратегия, и 2) многие люди уже слышали о Tit For Tat, поэтому, если бы я использовал это название, игроки могли бы просто делать ставки на этого персонажа, потому что они уже слышали о "Tit For Tat".</p>
+<p>Эта стратегия более известна в теории игр как <em>"Око за око"</em>. Она была создана Анатолием Рапопортом в 1980 году, для теории игрового турнира Роберта Аксельрода. Я решил не использовать имя "Око за око" потому что 1) это <em>звучит</em> грубовато, хотя это хорошая и справедливая стратегия, и 2) многие люди уже слышали об "Око за око", поэтому, если бы я использовал это название, игроки могли бы просто делать ставки на этого персонажа, потому что они уже слышали об "Око за око".</p>
 
 <h3>"Ты можешь скептически относиться к Рождественскому перемирию"</h3>
 
 <p>Был еще один парень, который тоже был настроен скептически. Во время перемирия немецкий капрал с отвращением заметил, <a href="http://time.com/3643889/christmas-truce-1914/">"Такого не должно быть в военное время. У вас нет немецкого чувства чести?"</a></p>
 
-<p>Этим человеком был Adolf Hitler.</p>
+<p>Этим человеком был Адольф Гитлер.</p>
 
-<p>Вы не можете просто заставить его заткнуться.</p>
+<p>Такое сложно было бы выдумать.</p>
 
 <h3>"Чтобы культура развивалась"</h3>
 
-<p>Есть новая, сверхъестественная междисциплинарная область, которая меня очень <em>волнует</em>, называется <em>Культурная Эволюция</em>. По общему признанию, это плохое имя, не в последнюю очередь потому, что оно звучит неудобно близко к "Социальному Дарвинизму". Что не так. Пинки обещает.</p>
+<p>Есть новая, сверхъестественная междисциплинарная область, которая меня очень <em>волнует</em>, называется <em>Культурная Эволюция</em>. По общему признанию, это плохое имя, не в последнюю очередь потому, что оно звучит неудобно близко к "Социальному Дарвинизму". Но это не так. Честное пионерское.</p>
 
 <p>Одной из основных частей теории Культурной Эволюции является культура, развивающаяся так же, как и жизнь: посредством вариации и отбора. Вариация: люди отличаются убеждениями и поведением, и придумывают новые почти каждый день. Выбор: люди пытаются подражать своим героям и предкам, и принимают их убеждения/поведение.</p>
 
-<p>(Примечание: это <em>не</em> совсем теория «мема» от Richard Dawkin. «Мем» подразумевает, что, подобно генам, идеи поступают в дискретные куски и воспроизводятся с высокой точностью. Это, очевидно, неверно. Также вы не можете сказать «мем» с прямым лицом в наши дни, так что не важно)</p>
+<p>(Примечание: это <em>не</em> совсем теория «мемов» Ричарда Докинза (Richard Dawkins). «Мем» подразумевает, что, подобно генам, идеи поступают в дискретные куски и воспроизводятся с высокой точностью. Это, очевидно, неверно. А ещё в наше время не получится сказать «мем» с серьезным лицом, так что пофиг)</p>
 
-<p>Причина, по которой я думаю, что Культурная Эволюция настолько многообещающая, заключается в том, что она может интегрировать <em>все</em> гуманитарные науки: психология, социология, экономика, антропология, политология, нейронаука, биология. Самые большие проблемы нашего времени не подчиняются общепринятым академическим границам &mdash; так что речь идет о времени, когда мы создали общий язык между науками и гуманитарием.</p>
+<p>Причина, по которой я думаю, что Культурная Эволюция настолько многообещающая, заключается в том, что она может объединить <em>все</em> гуманитарные науки: психологию, социологию, экономику, антропологию, политологию, неврологию, биологию. Самые большие проблемы нашего времени не подчиняются общепринятым академическим границам &mdash; так что речь идет о времени, когда мы создали общий язык между науками и гуманитарием.</p>
 
-<p>Если вы хотите больше узнать о Теории Эволюции Культуры, я настоятельно рекомендую книгу Joseph Heinlich 2015 года, <a href="http://press.princeton.edu/titles/10543.html">The Secret of Our Success</a>!</p>
+<p>Если вы хотите больше узнать о теории Культурной Эволюции, я настоятельно рекомендую книгу Джозефа Генри (Joseph Henrich) 2015 года, <a href="http://press.princeton.edu/titles/10543.html">The Secret of Our Success</a> (Секрет нашего успеха)!</p>
 
-<h3>"Эксплуататорство [Обманщиков] стало их падением"</h3>
+<h3>"Эксплуататорством [Обманщики] вырыли себе же яму"</h3>
 
-<p>Возможно, вы слышали, что кто-то нашел стратегию игрока, которая может "эксплуатировать эволюцию". Из <a href="https://www.scientificamerican.com/article/game-theory-calls-cooperation-into-question1/">Scientific American</a>: "[Пресса и результаты Dyson] предположили, что лучшие стратегии были эгоистичными, что привело к вымогательству, а не сотрудничеству."</p>
+<p>Возможно, вы слышали, что кто-то нашел стратегию игрока, которая может "эксплуатировать эволюцию". Из <a href="https://www.scientificamerican.com/article/game-theory-calls-cooperation-into-question1/">Scientific American</a>: "[Результат Press и Dyson] предполагал, что лучшие стратегии были эгоистичными, что привело к вымогательству, а не сотрудничеству."</p>
 
-<p>Пресса и находки Dyson <em>действительно</em> важны, но научный американец путал два разных использования слова "эволюционный". Первое использование, используемое этим интерактивным руководством, означало, что <em>популяция турнира</em> изменяется со временем. Второе использование, как это понимал P&amp;D, состояло в том, что <em>правила игрока</em> меняются со временем. Например: Детектив является "эволюционным", поскольку он меняет свои собственные правила, а Копикот &mdash; <em>не</em> "эволюционный", поскольку он придерживается своих принципов.</p>
+<p>Открытия Press и Dyson <em>действительно</em> важны, но Scientific American путал два разных использования слова "эволюционный". Первое, используемое этим интерактивным руководством, означало, что <em>популяция турнира</em> изменяется со временем. Второе использование, как это понимал P&amp;D, состояло в том, что <em>стратегия игрока</em> меняется со временем. Например: Детектив является "эволюционным", поскольку он меняет свою собственную стратегию, а Имитатор &mdash; <em>не</em> "эволюционный", поскольку он придерживается своих принципов.</p>
 
 <p>Таким образом, P&amp;D нашел стратегии, которые могли бы использовать "эволюционные" <em>игроки</em>, такие как Детектив, но их стратегии <em>всё ещё не могли эксплуатировать эволюцию турнира</em>, потому что в долгосрочной перспективе честные и хорошие стратегии всё ещё выигрывают.</p>
 
 <h3>"У нас меньше друзей &mdash; зацикленный круг."</h3>
 
-<p>Серьезно, прочитайте книгу Robert Putnam 2000 года, <a href="http://bowlingalone.com/">Bowling Alone</a>. Да, она уже немного устарела, 17 лет спустя, но её основные выводы и уроки по-прежнему верны как всегда &mdash; возможно, даже больше.</p>
+<p>Серьезно, прочитайте книгу Robert Putnam 2000 года, <a href="http://bowlingalone.com/">Bowling Alone</a> (Боулинг в одиночку). Да, она уже немного устарела, 17 лет спустя, но её основные выводы и уроки по-прежнему верны как всегда &mdash; возможно даже больше.</p>
 
 <h3>"Игра без нулевой суммы" / "Беспроигрышная"</h3>
 
-<p>Это звучит дёшего, но я всё ещё рекомендую книгу 1989 года, <a href="https://www.amazon.com/Habits-Highly-Effective-People-Powerful/dp/0743269519">The Seven Habits of Highly Effective People</a> &mdash; особенно Привычка #4: Беспроигрышное мышление.</p>
+<p>Эта на любителя, но я всё ещё обожаю книгу 1989 года, <a href="https://www.amazon.com/Habits-Highly-Effective-People-Powerful/dp/0743269519">The Seven Habits of Highly Effective People</a> (Семь навыков высокоэффективных людей) &mdash; особенно Навык 4. Думайте в духе «Выирал/выиграл».</p>
 
-<p>Потому что, вопреки распространенному мнению, придумывать решения беспроигрышных игр сложно, требует больших усилий и эмоционально больно. Черт возьми, я бы пошёл ещё дальше - я бы сказал, что наша культурная позиция по-умолчанию "нас против них" - это легкий путь, ленивый путь, эквивалент активности нездоровой пищи.</p>
+<p>Потому что, вопреки распространенному мнению, придумывать беспроигрышные решения сложно, требует больших усилий и эмоционально больно. Черт возьми, я бы пошёл ещё дальше - я бы сказал, что наша культурная позиция по-умолчанию "мы против них" - это легкий путь, ленивый путь, эквивалент фаст фуда.</p>
 
-<p>В общем. В сторону преувеличения, я твёдо верю, что "беспроигрышная" / "не нулевая сумма" это то что нам всем срочно необходимо &mdash; в нашей личной жизни, социальной жизни, и <em>определённо</em> в политической жизни.</p>
+<p>В общем, если без преувеличений, я твёдо верю, что "беспроигрышная" / "не нулевая сумма" это то что нам всем срочно необходимо &mdash; в нашей личной жизни, социальной жизни, и <em>определённо</em> в политической жизни.</p>
 
 <h3>"Копикотёнок"</h3>
 
-<p>Точно так же, как и оригинальное имя Копикота из Tit For Tat, Оригинальное имя Копикотёнка из <em>Tit For Two Tats</em>. То же правило: сотрудничать, пока другие игроки не обманывают <em>дважды</em> подряд.</p>
+<p>Точно так же, как и оригинальное имя Имитатора это "Око за око", оригинальное имя Подражателя это <em>"Око за два ока"</em>. То же правило: сотрудничать, пока другие игроки не обманывают <em>дважды</em> подряд.</p>
 
-<p>Есть еще один прощающий вариант Tit For Tat, называемый <em>Generous Tit For Tat</em>. У этого есть аналогичное, но немного другое правило: сотрудничать, но если другие игроки жульничают, то прощать их с X% вероятностью. Этот дизайн с переменной "X" позволяет вам устанавливать разные уровни "снисхождения" для игрока.</p>
+<p>Есть еще один прощающий вариант "Око за око", называемый <em>"Око за око с прощением"</em>. У этого есть аналогичное, но немного другое правило: сотрудничать, но если другие игроки жульничают, то прощать их с X% вероятностью. Этот дизайн с переменной "X" позволяет вам устанавливать разные уровни "снисхождения" для игрока.</p>
 
 <h3>"Простак"</h3>
 
-<p>Также известен как Pavlov или Выиграл-Останься-Проиграл-Переключись.</p>
+<p>Также известен как Павлов или Выиграл-Останься-Проиграл-Переключись.</p>
 
 <h3>"Наши СМИ [...] увеличили наше недопонимание"</h3>
 
-<p>Мне всего лишь двадцать, я не знаю, почему я всегда звучу как старый ворчун, трясущий кулаком на облака. Но, да, во всяком случае, прочитайте книгу Neil Postman 1985 года, <a href="https://www.amazon.com/Amusing-Ourselves-Death-Discourse-Business/dp/014303653X">Amusing Ourselves To Death</a>. Речь идет о том, как коммуникационные технологии, которые мы используем, тонко формируют нашу культуру ("среда - это сообщение") и как технология, которая предвзята к быстрой информации (ТВ в 1985 году, социальные медиа сейчас) превращает нас всех в тривиальных, краткосрочных мыслителей.</p>
+<p>Мне еще даже нет тридцати, я не знаю, почему я всегда звучу как старый ворчун, трясущий кулаком на облака. Но, да, во всяком случае, прочитайте книгу Нейла Постмана (Neil Postman) 1985 года, <a href="https://www.amazon.com/Amusing-Ourselves-Death-Discourse-Business/dp/014303653X">Amusing Ourselves To Death</a> (Развлекаемся до смерти). Речь идет о том, как коммуникационные технологии, которые мы используем, тонко формируют нашу культуру ("среда - это сообщение") и как технология, которая предвзята к быстрой информации (ТВ в 1985 году, социальные медиа сейчас) превращает нас всех в тривиальных, краткосрочных мыслителей.</p>
 
-<p>Хотя я не согласен со <em>всем</em> в его книге, это настоящий открытый взгляд и удивительно предсказуемый для 1985 года. Однако его разглагольствование на Sesame Street, похоже, странно.</p>
+<p>Хотя я не согласен со <em>всем</em> в его книге, это настоящий открытый взгляд и удивительно предсказуемый для 1985 года. Однако его разглагольствование на Улице Сезам, немного странное.</p>
 
-<h3>"Строй отношения. Находи победы. Общайся чётко."</h3>
+<h3>"Строй отношения. Находи беспроигрышные решения. Общайся чётко."</h3>
 
-<p>Предоставление совета может расцениваться как снисхождение, поэтому позвольте мне быть совершенно честным: я <em>не</em> понял это лично. Я плохо разбираюсь в дружбе, особенно с людьми отличных от моих политических взглядов. Я иногда забываю о выигрышных победах и размышляю о "нас против них". И, судя по этому бормотанию, я всё ещё ужасен в общении.</p>
+<p>Предоставление совета может расцениваться как снисхождение, поэтому позвольте мне быть совершенно честным: я <em>не</em> до конца со всем этим разобрался. Я плохо разбираюсь в дружбе, особенно с людьми отличных от моих политических взглядов. Я иногда забываю о беспроигрышных решениях и размышляю о "мы против них". И, судя по всему этому бормотанию, я всё ещё ужасен в общении.</p>
 
-<p>Но я хочу становиться лучше. Всё это <em>тяжёло</em>. Построение мира и доверия на земле, снизу вверх, это <em>тяжело</em>.</p>
+<p>Но я хочу становиться лучше. Это все <em>тяжёло</em>. Построение мира и доверия на земле снизу вверх <em>тяжело</em>.</p>
 
 <p>И именно поэтому оно того стоит. &lt;3</p>
 
