:pencil2: Duplicate text in NOTES.md and small fixes

--- a/notes/index.html
+++ b/notes/index.html
@@ -84,7 +84,7 @@ So, it's optional to translate these!
 
 <p>В общем, если без преувеличений, я твёдо верю, что "беспроигрышная" / "не нулевая сумма" это то что нам всем срочно необходимо &mdash; в нашей личной жизни, социальной жизни, и <em>определённо</em> в политической жизни.</p>
 
-<h3>"Копикотёнок"</h3>
+<h3>"Подражатель"</h3>
 
 <p>Точно так же, как и оригинальное имя Имитатора это "Око за око", оригинальное имя Подражателя это <em>"Око за два ока"</em>. То же правило: сотрудничать, пока другие игроки не обманывают <em>дважды</em> подряд.</p>
 
