--- a/words.html
+++ b/words.html
@@ -74,7 +74,7 @@ Thanks again!
 <!-- TRANSLATION NOTE: UNCOMMENT THE FOLLOWING & ADD YOUR OWN NAME! -->
 
 <br>
-перевели максим toby3d лебедев и александр <a href="https://blog.debiania.in.ua/">minoru</a> батищев
+перевели <a href="https://toby3d.github.io">toby3d</a> и <a href="https://blog.debiania.in.ua">minoru</a>
 <br>
 <a href="http://ncase.me/trust/">original English version</a>
 
@@ -975,7 +975,7 @@ one for the plural version, one for the singular version.
 
 основано на книге Роберта Аксельрода 1984-го года,<br>
 <span class="big">"THE EVOLUTION OF COOPERATION"</span><br>
-<a href="notes" target="_blank">прочти мои сноски для этой игры</a>
+<a href="notes" target="_blank">прочти мои заметки для этой игры</a>
 
 <span class="divider"></span>
 
