--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@ Many thanks again!
 	<meta property="og:description" content="интерактивное руководство теории игр о том, зачем и как мы доверяем друг другу">
 
 	<!-- Styles -->
-	<link rel="stylesheet" href="css/slides.css?v8">
-	<link rel="stylesheet" href="css/balloon.css?v8">
+	<link rel="stylesheet" href="css/slides.css?v9">
+	<link rel="stylesheet" href="css/balloon.css?v9">
 
 </head>
 <body>
@@ -83,13 +83,12 @@ Many thanks again!
 
 		<!-- List of translations thus far! -->
 		<div id="translations">
-			fan-translations so far:
-			<a href="https://github.com/ncase/trust#how-to-translate-this-thang" target="_blank">(add your own!)</a> |
+			другие фан-переводы:
+			<a href="https://github.com/ncase/trust#how-to-translate-this-thang" target="_blank">(добавь свой!)</a> |
 			<a href="https://ccamara.github.io/trust/">Español de España</a> |
 			<a href="https://ayowel.github.io/trust/">Français</a> | 
 			<a href="https://jkoelling.github.io/trust/">Deutsch</a> |
 			<a href="https://lvdt.github.io/trust/">Italiano</a> |
-			<a href="https://notdotteam.github.io/trust/">Русский</a> |
 			<a href="https://brunolemos.github.io/trust/">Português do Brasil</a> | 
 			<a href="http://sekai.co/trust/">中文</a> | 
 			<a href="https://audreyt.github.io/trust-zh-TW/">中文（臺灣)</a>	
@@ -100,50 +99,50 @@ Many thanks again!
 </html>
 
 <!-- Libraries -->
-<script src="js/lib/helpers.js?v8"></script>
-<script src="js/lib/pegasus.js?v8"></script>
+<script src="js/lib/helpers.js?v9"></script>
+<script src="js/lib/pegasus.js?v9"></script>
 <script>var c_ = {};</script>
-<script src="js/lib/minpubsub.src.js?v8"></script>
-<script src="js/lib/q.js?v8"></script>
-<script src="js/lib/pixi.min.js?v8"></script>
-<script src="js/lib/howler.js?v8"></script>
+<script src="js/lib/minpubsub.src.js?v9"></script>
+<script src="js/lib/q.js?v9"></script>
+<script src="js/lib/pixi.min.js?v9"></script>
+<script src="js/lib/howler.js?v9"></script>
 <script>var createjs = window;</script>
-<script src="js/lib/tweenjs-0.6.2.min.js?v8"></script>
+<script src="js/lib/tweenjs-0.6.2.min.js?v9"></script>
 <script>Ticker.framerate=60; Ticker.paused=true;</script>
-<script src="js/lib/sharing.js?v8"></script>
+<script src="js/lib/sharing.js?v9"></script>
 
 <!-- Core Engine -->
-<script src="js/core/Loader.js?v8"></script>
-<script src="js/core/Slideshow.js?v8"></script>
-<script src="js/core/SlideSelect.js?v8"></script>
-<script src="js/core/Button.js?v8"></script>
-<script src="js/core/TextBox.js?v8"></script>
-<script src="js/core/Words.js?v8"></script>
-<script src="js/core/IncDecNumber.js?v8"></script>
-<script src="js/core/Slider.js?v8"></script>
-<script src="js/core/Scratcher.js?v8"></script>
-<script src="js/core/Background.js?v8"></script>
-<script src="js/core/ImageBox.js?v8"></script>
-<script src="js/core/PayoffsUI.js?v8"></script>
+<script src="js/core/Loader.js?v9"></script>
+<script src="js/core/Slideshow.js?v9"></script>
+<script src="js/core/SlideSelect.js?v9"></script>
+<script src="js/core/Button.js?v9"></script>
+<script src="js/core/TextBox.js?v9"></script>
+<script src="js/core/Words.js?v9"></script>
+<script src="js/core/IncDecNumber.js?v9"></script>
+<script src="js/core/Slider.js?v9"></script>
+<script src="js/core/Scratcher.js?v9"></script>
+<script src="js/core/Background.js?v9"></script>
+<script src="js/core/ImageBox.js?v9"></script>
+<script src="js/core/PayoffsUI.js?v9"></script>
 
 <!-- Simulations -->
-<script src="js/sims/Splash.js?v8"></script>
-<script src="js/sims/PD.js?v8"></script>
-<script src="js/sims/Iterated.js?v8"></script>
-<script src="js/sims/Tournament.js?v8"></script>
-<script src="js/sims/SandboxUI.js?v8"></script>
+<script src="js/sims/Splash.js?v9"></script>
+<script src="js/sims/PD.js?v9"></script>
+<script src="js/sims/Iterated.js?v9"></script>
+<script src="js/sims/Tournament.js?v9"></script>
+<script src="js/sims/SandboxUI.js?v9"></script>
 
 <!-- Slides -->
-<script src="js/slides/0_Slides_Intro.js?v8"></script>
-<script src="js/slides/1_Slides_OneOff.js?v8"></script>
-<script src="js/slides/2_Slides_Iterated.js?v8"></script>
-<script src="js/slides/3_Slides_Tournament.js?v8"></script>
-<script src="js/slides/4_Slides_Evolution.js?v8"></script>
-<script src="js/slides/5_Slides_Distrust.js?v8"></script>
-<script src="js/slides/6_Slides_Noise.js?v8"></script>
-<script src="js/slides/7_Slides_Sandbox.js?v8"></script>
-<script src="js/slides/8_Slides_Conclusion.js?v8"></script>
-<script src="js/slides/9_Slides_Credits.js?v8"></script>
+<script src="js/slides/0_Slides_Intro.js?v9"></script>
+<script src="js/slides/1_Slides_OneOff.js?v9"></script>
+<script src="js/slides/2_Slides_Iterated.js?v9"></script>
+<script src="js/slides/3_Slides_Tournament.js?v9"></script>
+<script src="js/slides/4_Slides_Evolution.js?v9"></script>
+<script src="js/slides/5_Slides_Distrust.js?v9"></script>
+<script src="js/slides/6_Slides_Noise.js?v9"></script>
+<script src="js/slides/7_Slides_Sandbox.js?v9"></script>
+<script src="js/slides/8_Slides_Conclusion.js?v9"></script>
+<script src="js/slides/9_Slides_Credits.js?v9"></script>
 
 <!-- Main Code -->
-<script src="js/main.js?v8"></script>
+<script src="js/main.js?v9"></script>
