:pencil2: Fix typos, but still need help with #7

--- a/words.html
+++ b/words.html
@@ -74,7 +74,7 @@ Thanks again!
 <!-- TRANSLATION NOTE: UNCOMMENT THE FOLLOWING & ADD YOUR OWN NAME! -->
 
 <br>
-перевели <a href="https://toby3d.github.io">toby3d</a> и <a href="https://blog.debiania.in.ua">minoru</a>
+перевод <a href="https://toby3d.github.io">toby3d</a>, редактура <a href="https://blog.debiania.in.ua">minoru</a>
 <br>
 <a href="http://ncase.me/trust/">original English version</a>
 
@@ -795,8 +795,8 @@ Thanks again!
 оказался наиболее успешным! (примечание: <span class="tf2t">Подражатель</span> настолько снисходителен,
 что даже <i>не полностью</i> уничтожает <span class="tft">Имитатора</span>. Они уживаются вместе)
 <br><br>
-В данном случае небольшое "недопонимание" (вероятнотсь ошибки в каждом раунде &mdash; 5%) может привести
-к <i>большей</i> степени снисходительности. Но будет ли это справдливо для <i>всех</i> уровней...
+В данном случае небольшое "недопонимание" (вероятность ошибки в каждом раунде &mdash; 5%) может привести
+к <i>большей</i> степени снисходительности. Но будет ли это справедливо для <i>всех</i> уровней...
 </p>
 <p id="noise_evo_4_2_btn">
 ...недопонимания?
