:twisted_rightwards_arrows: Incorporate more ideas from @AYuPro's translation (#8)
* Incorporate more ideas from @AYuPro's translation

* Address review comments

--- a/words.html
+++ b/words.html
@@ -210,8 +210,8 @@ Thanks again!
 <p id="iterated_intro_top">
 <b>Теперь играем по-настоящему.</b>
 Против тебя будут пять разных противников, у каждого из которых есть своя собственная "стратегия".
-С каждым ты проведёшь от 3 до 7 раундов.
-(Не зная заранее, сколько всего будет раундов)
+С каждым ты проведёшь 3&ndash;7 раундов.
+(Не зная заранее, какой раунд последний)
 Можешь ли ты им доверять? Вернее... могут ли они доверять <i>тебе?</i>
 </p>
 
@@ -353,13 +353,13 @@ Thanks again!
 Проще говоря, ты не стреляешь в меня, я не стреляю в тебя. И это работало, во многих местах!
 </p>
 <p id="tournament_7">
-Ты всё ещё можешь быть скептичен. Большинство солдат не склонны внезапно устанавливать мир с врагом.
+Ты всё ещё можешь быть скептичен. Большинство солдат не склонны спонтанно мириться с врагом.
 Что такого особенного в <i>позиционной</i> войне?
 </p>
 <p id="tournament_8">
 В окопах уникально вот что:
 в отличии от почти любой другой формы войны,
-тебе приходится каждый день сталкиваться <i>с одними и теми же солдатами</i>. 
+тебе приходится видеть <i>одних и тех же солдат</i> каждый день.
 </p>
 <p id="tournament_9">
 <b>Это повторяющаяся игра.</b> И в <i>этом</i> всё различие.
@@ -418,7 +418,7 @@ Thanks again!
 <p id="evolution_intro_footer">
 ...и ПОВТОРЯЕМ, пока не надоест.
 Примечание: для развития культуры не обязательно дожидаться, пока люди в буквальном смысле умрут и размножатся &mdash;
-достаточно, чтобы "неудачное" поведение пропадало, а "успешное" копировалось.
+достаточно, чтобы "неудачные" модели поведения исчезали, а "успешные" распространялись.
 Итак...
 </p>
 <p id="evolution_intro_button">
@@ -490,7 +490,7 @@ Thanks again!
 Именно: <span class="all_d">Обманщики</span> стали жертвами собственного успеха!
 Они использовали <span class="all_c">Наивных</span>,
 но как только с теми было покончено, <span class="all_d">Обманщикам</span> пришлось столкнуться с <span class="tft">Имитаторами</span>:
-которые <i>приятны</i>, но не наивны.
+которые <i>доброжелательны</i>, но не наивны.
 </p>
 
 <p id="evo_7">
@@ -566,7 +566,7 @@ Thanks again!
 Раз уж стратегия <span class="tft">Имитаторов</span> так сильна в этой повторяющейся игре на доверие
 &mdash; настолько удачна, что даже солдаты Первой мировой переизобрели её под именем "живи и дай жить другим" &mdash;
 почему тогда вокруг так много недоверчивых, ненадёжных людей?
-Что является причиной эпидемии недоверия?
+Что привело к этой эпидемии недоверия?
 <br><br>
 Ключ в самой формулировке. "В <i>этой</i> повторяющейся игре на доверие."
 Пока что мы говорили только об изменениях в игроках:
@@ -582,7 +582,7 @@ Thanks again!
 <!-- - - - - - - - - - - - - - - - - -->
 
 <p id="distrust_1">
-Прежде чем всё начнёт рушится, давай рассмотрим кое-что приятное.
+Прежде чем всё начнёт рушиться, давай рассмотрим кое-что приятное.
 Вот мир, полностью заполненный <span class="all_c">Наивными</span>, за исключением одного <span class="all_d">Обманщика</span> и одного <span class="tft">Имитатора</span>.
 <br><br>
 Используй кнопки справа, чтобы <b>НАЧАТЬ</b> симуляцию,
@@ -594,10 +594,10 @@ Thanks again!
 <span class="tft">Имитатор</span>
 в долгосрочной перспективе выигрывает.
 <br><br>
-Но это при <i>текущих</i> правилах, согласно которым персонажи играют друг против друга по 10 раундов за матч.
+Но это при <i>текущих</i> правилах, гласящих, что персонажи играют друг против друга по 10 раундов за матч.
 Продолжит ли <span class="tft">Имитатор</span> выигрывать в 7 раундах? 5 раундах? 3? 2? 1?
 <br><br>
-<b>Измени количество раундов</b> с помощью слайдера ниже, затем <b>ЗАПУСТИ</b> симуляцию и посмотри, что произойдет.
+<b>Измени количество раундов</b> с помощью ползунка ниже, затем <b>ЗАПУСТИ</b> симуляцию и посмотри, что произойдет.
 Не стесняйся экспериментировать!
 </p>
 
@@ -820,7 +820,7 @@ Thanks again!
 <br><br>
 Вот почему "недопонимание" образует такую интересную преграду доверию:
 когда его <i>немного</i>, оно приводит к снисходительности,
-но его <i>избыток</i> способоствует широко распространенному недоверию!
+но его <i>избыток</i> способствует широко распространенному недоверию!
 Я думаю, наши современные медиа-технологии
 хоть и помогли развить связь...
 но гораздо больше увеличили степень нашего <i>недопонимания</i>.
@@ -897,14 +897,14 @@ one for the plural version, one for the singular version.
 но для его развития нужно ожидать повторных взаимодействий в будущем.
 </p>
 <p id="conclusion_2_a">
-2. ВОЗМОЖНАЯ ВЗАИМОВЫГОДА
+2. ВОЗМОЖНОСТЬ ОБОЮДНОЙ ВЫГОДЫ
 </p>
 <p id="conclusion_2_a2">
 Вы должны играть в игру с ненулевой суммой,
 где есть хоть какой-то шанс, что <i>оба</i> игрока что-то получат &mdash; то есть достигнут взаимовыгодного исхода.
 </p>
 <p id="conclusion_3_a">
-3. МИНИМУМ НЕДОПОНИМАНИЯ
+3. НИЗКИЙ УРОВЕНЬ НЕДОПОНИМАНИЯ
 </p>
 <p id="conclusion_3_a2">
 Если уровень недопонимания <i>слишком</i> высок, доверие ломается.
@@ -912,7 +912,7 @@ one for the plural version, one for the singular version.
 </p>
 <p id="conclusion_4">
 Конечно, реальное доверие зависит от гораздо большего количества факторов.
-Есть репутация, общие ценности, контракты, культурные маркеры, бла-бла-бла.
+Это репутация, общие ценности, сделки, культурная принадлежность и так далее.
 И давай не будем забывать...
 </p>
 <p id="conclusion_btn">
