:twisted_rightwards_arrows: Используем «ё» и «ползунок»; исправлена опечатка (#10)
* Use "ё" wherever it makes sense

* Fix a typo

* "Слайдер" → "ползунок"

--- a/words.html
+++ b/words.html
@@ -156,7 +156,7 @@ Thanks again!
 </p>
 
 <p id="oneoff_0_btm">
-<b>Скажем, другой игрок обманывает и не кладет монету.</b><br>
+<b>Скажем, другой игрок обманывает и не кладёт монету.</b><br>
 Что должен сделать ты?
 </p>
 
@@ -175,7 +175,7 @@ Thanks again!
 </p>
 
 <p id="oneoff_1_btm">
-<b>Но предположим, что другой игрок доверился и кладет монету.</b><br>
+<b>Но предположим, что другой игрок доверился и кладёт монету.</b><br>
 Что теперь должен сделать ты?
 </p>
 
@@ -441,7 +441,7 @@ Thanks again!
 Ну да, сейчас <span class="all_c">Наивных</span> больше всего...
 </p>
 <p id="evo_2_all_d">
-Ну да, у <span class="all_d">Общанщиков</span> много <span class="all_c">Наивных</span>, которыми можно воспользоваться...
+Ну да, у <span class="all_d">Обманщиков</span> много <span class="all_c">Наивных</span>, которыми можно воспользоваться...
 </p>
 <p id="evo_2_tft">
 Ну да, <span class="tft">Имитатор</span> выиграл в прошлый раз, почему бы ему не выиграть снова?...
@@ -473,7 +473,7 @@ Thanks again!
 которых стало на 5 больше.
 </p>
 <p id="evo_3">
-Но давай попробуем провести еще несколько раундов...
+Но давай попробуем провести ещё несколько раундов...
 </p>
 
 <p id="evo_4">
@@ -570,7 +570,7 @@ Thanks again!
 <br><br>
 Ключ в самой формулировке. "В <i>этой</i> повторяющейся игре на доверие."
 Пока что мы говорили только об изменениях в игроках:
-как насчет <i>изменений в игре?</i>
+как насчёт <i>изменений в игре?</i>
 <i>Что</i> могло бы привести к...
 </p>
 <p id="evo_11_btn">
@@ -597,7 +597,7 @@ Thanks again!
 Но это при <i>текущих</i> правилах, гласящих, что персонажи играют друг против друга по 10 раундов за матч.
 Продолжит ли <span class="tft">Имитатор</span> выигрывать в 7 раундах? 5 раундах? 3? 2? 1?
 <br><br>
-<b>Измени количество раундов</b> с помощью ползунка ниже, затем <b>ЗАПУСТИ</b> симуляцию и посмотри, что произойдет.
+<b>Измени количество раундов</b> с помощью ползунка ниже, затем <b>ЗАПУСТИ</b> симуляцию и посмотри, что произойдёт.
 Не стесняйся экспериментировать!
 </p>
 
@@ -661,7 +661,7 @@ Thanks again!
 <!-- - - - - - - - - - - - - - - - - -->
 
 <p id="noise_1">
-У <span class="tft">Имитатора</span> есть огромная, смертельная слабость, о которой я еще не упоминал.
+У <span class="tft">Имитатора</span> есть огромная, смертельная слабость, о которой я ещё не упоминал.
 Чтобы понять проблему, давай представим как два <span class="tft">Имитатора</span> играют друг против друга:
 </p>
 <p id="noise_1_end">
@@ -803,9 +803,9 @@ Thanks again!
 </p>
 
 <p id="noise_evo_5">
-<b>Используй слайдер внизу, чтобы изменить вероятность "недопонимания", затем нажми СТАРТ.</b>
+<b>Используй ползунок внизу, чтобы изменить вероятность "недопонимания", затем нажми СТАРТ.</b>
 На 5% выигрывает <span class="tf2t">Подражатель</span>.
-Что происходит при 0%? Или 20%? Или 50%? (Слайдер только до 50% потому, что при 50% каждый ход превращается в подбрасывание монетки)
+Что происходит при 0%? Или 20%? Или 50%? (Ползунок только до 50% потому, что при 50% каждый ход превращается в подбрасывание монетки)
 </p>
 <p id="noise_evo_5_continue">
 Когда закончишь играть, нажми:
@@ -820,7 +820,7 @@ Thanks again!
 <br><br>
 Вот почему "недопонимание" образует такую интересную преграду доверию:
 когда его <i>немного</i>, оно приводит к снисходительности,
-но его <i>избыток</i> способствует широко распространенному недоверию!
+но его <i>избыток</i> способствует широко распространённому недоверию!
 Я думаю, наши современные медиа-технологии
 хоть и помогли развить связь...
 но гораздо больше увеличили степень нашего <i>недопонимания</i>.
